# tinytorch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cpu.sh  cuda.sh  main.cpp  test.cpp
core/: device.cpp  device.hpp  matrix  matrix.cpp  matrix.hpp  matrix_cpu.cpp  matrix_factory.cpp  tensor  tensor.cpp
cpu/: matrix_cpu.cpp  matrix_cpu.hpp
cuda/: matrix_cuda.cuh
docs/: TUTORIAL.md
include/tinytorch/core/: device.hpp  matrix.hpp  matrix_factory.hpp  tensor.hpp
include/tinytorch/cpu/: matrix_cpu.hpp
include/tinytorch/cuda/: matrix_cuda.cuh
src/core/: matrix_factory.cpp  tensor.cpp
src/cpu/: matrix_cpu.cpp
src/cuda/: matrix_cuda.cu
